--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -29,7 +29,7 @@ input.display_string(name='attr_toggles' type='hidden' value='')
 
 
 //- OBJECTS
-//- =============================
+//- ============================={{/damage}}
 include src/pug/_objects.pug
 
 
