--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -110,7 +110,11 @@
     .sheet-header-body { grid-template-columns: 3em 1fr; }
     .sheet-italic {font-style: italic;}
     .sheet-margin-left {margin-left: 2%; }
-    .sheet-pictos { font-family: $pictos; }
+    .sheet-pictos { font-family: 'pictos'; }
+    .sheet-dicefontd10 {
+        color: $maincolor;
+        font-family: 'dicefontd10';
+    }
 
     h2.sheet-aligned-left,
     h3.sheet-aligned-left { 
@@ -137,10 +141,6 @@
         grid-row-gap: 0.2em;
         grid-template-columns: 1fr 1fr;
 
-        button[type='roll'] {
-            text-align: left;
-        }
-
         h1 {
            font-size: 1em;
            text-align: center;
@@ -152,10 +152,6 @@
             &[type='number'] {
                 width: 100%;
             }
-
-            &[type='text'] {
-                text-align: left;
-            } 
         }
 
         div.sheet-section-header {
@@ -179,7 +175,9 @@
         div.sheet-personal-data {
             grid-column: 1 / 3;
 
-            @import 'src/scss/_section_personal_data';   
+            @import 'src/scss/_section_personal_data';
+
+            input[type='text'] { text-align: left; } 
         }
 
         /* STATISTICAL DATA
@@ -204,9 +202,10 @@
             div.sheet-section-stats {
                 grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
 
+                button[type='roll'] { text-align: left;  }
+                div.sheet-horz-line { grid-column: 1 / 8; }
                 input[type='number'] { text-align: right; }
                 span.sheet-center {  padding-top: 25%; }
-                div.sheet-horz-line { grid-column: 1 / 8; }
             }
 
             //DERIVED ATTRIBUTES
@@ -238,6 +237,10 @@
             }
             
             div.sheet-section-bonds {
+                input[type='text'] {
+                    text-align: center;
+                }
+
                 div.sheet-max-height {
                     max-height: 1.8em;
                 }
@@ -288,30 +291,33 @@
                         border-right: 0.15em solid $maincolor;
                     }
 
-                    div.sheet-horz-line {
-                        grid-column: 1 / 5;
-                    }
-
-                    input[type='checkbox'] {
-                        margin-left: 10%;
-                        margin-top: 50%;
-                    }
-
-                    input[type='number'] { height: 100%; }
-
-                    span {
-                        font-size: 0.8em;
-                        text-align: center;
-                    }
+                    div.sheet-horz-line { grid-column: 1 / 5;  }
 
                     button {
                         display: inline;
+                        text-align: left; 
 
                         h3 {
                             display: inline;
                             margin-right: 5%;
                             padding-left: 2%;
                         }
+
+                        &.sheet-dicefontd10[type="roll"] { text-align: center; }
+                    }
+
+                    input {
+                        &[type='number'] { height: 100%; }
+
+                        &[type='checkbox'] {
+                            margin-left: 10%;
+                            margin-top: 50%;
+                        }
+                    }
+
+                    span {
+                        font-size: 0.8em;
+                        text-align: center;
                     }
 
                     label.sheet-custom-label { grid-column: 1 / 5; }
@@ -362,7 +368,12 @@
             grid-column: 1 / 3;
 
             div.sheet-section-weapons {
-                grid-template-columns: 8em 0.155em 1fr 0.155em 2fr 0.155em 2fr 0.155em 3fr 0.155em 2fr 0.155em 2fr 0.155em 1fr;
+                grid-template-columns: 15em 0.155em 1fr 0.155em 2fr 0.155em 2fr 0.155em 3fr 0.155em 2fr 0.155em 2fr 0.155em 1fr 0.155em 2em;
+            }
+
+            h2 {
+                &:nth-of-type(1) { margin-left: 2%; }
+                &:nth-of-type(1n+2) { text-align: center; }
             }
 
             div.sheet-repeating-container {
@@ -370,6 +381,14 @@
                     .repcontrol_add {
                         right: -93%;
                     }
+                }
+
+                input[name="attr_weapons"] {
+                    text-align: left;
+                }
+
+                button.sheet-none {
+                    display: none;
                 }
             }
         }
@@ -383,9 +402,21 @@
             div.sheet-section-body {
                 grid-template-columns: 1fr 0.155em 1fr;
 
+                textarea {
+                    min-height: 90%;
+                    margin-bottom: 2%;
+                }
 
                 div.sheet-section-19 {
                     grid-template-columns: 1fr 0.155em 1fr;
+
+                    input[type='text'][name='attr_special_training'] {
+                        text-align: left;
+                    }
+
+                    input[type='text'][name='attr_skill_or_stat_used'] {
+                        text-align: center;
+                    }
                 }
 
                 div.sheet-repeating-container {
@@ -440,7 +471,7 @@
 
 /* SETTINGS SHEET
 ============================= */
-    button[name="act_sheet_select"] {
+    button[name='act_sheet_select'] {
         height: 2em;
         width: 2em;
     }
