--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -125,10 +125,12 @@
           .horz-line
           fieldset.repeating_skills
             .grid.section-repeating.border-bottom
+              - const skillRollValue = `@{gm_toggle} &{template:rolls} {{header=@{name}}} {{subheader=@{rank}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`;
               label.styled-checkbox(data-i18n-title='skill fail checkbox' title='skill fail checkbox')
                 input(name='attr_fail' title='@{repeating_skills_${x}_fail}' type='checkbox')
-              input(data-i18n-placeholder='skill name' name='attr_name' placeholder='skill name' title='@{repeating_skills_${x}_name}' type='text' value='')
-              button(data-i18n-title='skill roll' name='skill roll' title='skill roll' type='roll' value='')
+              label(data-i18n-title='skill name' title='skill name')
+                input.center(data-i18n-placeholder='skill name' name='attr_name' placeholder='skill name' title='@{repeating_skills_${x}_name}' type='text' value='')
+              button.dicefontd10(data-i18n-title='skill roll' name='skill roll' title='skill roll' type='roll' value='') k
               .vert-line
               label(data-i18n-title='skill rank' title='skill rank')
                 input(data-i18n-placeholder='0' name='attr_rank' title='@{repeating_skills_${x}_rank}' placeholder='0' type='number' value='')
@@ -163,17 +165,20 @@
       .grid.section-weapons.border-bottom
         each weapon in weaponsAttrs
           - const weaponHeader = (weapon === 'weapons') ? '16. weapons' : weapon;
-          h2.center(data-i18n=weaponHeader data-i18n-title=weaponHeader title=weaponHeader)= weaponHeader
+          h2(data-i18n=weaponHeader data-i18n-title=weaponHeader title=weaponHeader)= weaponHeader
           .vert-line
       .repeating-container.border-bottom
         fieldset.repeating_weapons
           .grid.section-weapons.border-bottom
+            - const weaponRollValue = `@{gm_toggle} &{template:rolls} {{header=@{weapons}}} {{subheader=@{skill_percent}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}} {{damage=^{damage} [@{damage}](~repeating_weapons_damage)}}`; 
             each weapon in weaponsAttrs
               - const attrName = weapon.replace(' ', '_').replace('%', 'percent')
               - const type = weapon.includes('%') || weapon === 'ammo' ? 'number' : 'text';
                 label(data-i18n-title=weapon + ' input' title=weapon + ' input')
                   input(data-i18n-placeholder=weapon name='attr_' + attrName placeholder=weapon title='@{repeating_weapons_${x}_' + attrName + '}' type=type value='')
                 .vert-line
+            button.dicefontd10(name='weapon' type='roll' title='weapon roll' value=weaponRollValue) k
+            button.none(name='roll_damage' type='roll' value='@{gm_toggle} &{template:rolls} {{damage=[[@{damage}]]}}')
 
   //REMARKS
   .grid.header-body.remarks.border
@@ -194,7 +199,7 @@
           h2.aligned-left(data-i18n='skill or stat used' data-i18n-title='skill or stat used') skill or stat used
         .repeating-container.border-bottom
           fieldset.repeating_special
-            .grid.section-19
+            .grid.section-19.border-bottom
               label(data-i18n-title='special training input' title='special training input')
                 input(name='attr_special_training' placeholder='special training' title='@{repeating_weapons_${x}_special_training}' type='text' value='')
               .vert-line
@@ -217,9 +222,9 @@
 
   //BOTTOM DECORATION
   .grid.section-bottom-decor
-    span(data-i18n='DD' class="uppercase") DD
-    span(data-i18n='united states form' class="uppercase") united states form
+    span(data-i18n='DD' class='uppercase') DD
+    span(data-i18n='united states form' class='uppercase') united states form
     span(data-i18n='315' ) 315
-    span(data-i18n='top secret//orcon//special access required delta green agent documenation sheet' class="uppercase") top secret//orcon//special access required delta green agent documenation sheet 
+    span(data-i18n='top secret//orcon//special access required delta green agent documenation sheet' class='uppercase') top secret//orcon//special access required delta green agent documenation sheet 
       span(name='attr_version')
     span(data-i18n='112382' ) 112382
