--- a/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
@@ -3,18 +3,29 @@
 .rolltemplates
   rolltemplate.sheet-rolltemplate-rolls
     .sheet-template-container
-      // - Display a header on the template -
+      //- Display a header on the template -
+      | {{#header}}
       .sheet-template-header
-        h1 {{#header}}{{header}}{{/header}}
-        h2 {{#subheader}}({{subheader}}%){{/subheader}}
-      // - Display the dice roll in the template -
+        h1 {{header}}
+        | {{#subheader}}
+        h2 ({{subheader}}%)
+        | {{/subheader}}
+      | {{/header}}
+      //- Display the dice roll in the template -
       .sheet-template-body
+        | {{#dice}}
         .sheet-template-row
           span.inlinerollresult {{#rollTotal() dice 10}}{{/rollTotal() dice 10}}{{#rollLess() dice 10}}{{dice}}{{/rollLess() dice 10}}
           span.inlinerollresult {{#rollTotal() dice2 10}}0{{/rollTotal() dice2 10}}{{#rollLess() dice2 10}}{{dice2}}{{/rollLess() dice2 10}}
           span.percent %
-        // - Display a description. This is great for text included with a roll -
+        | {{/dice}}
+        //- Damage die roll
+        | {{#damage}}
+        .sheet-template-row 
+          span.inlinerollresult {{damage}}
+        | {{/damage}}
+        //- Display a description. This is great for text included with a roll -
         | {{#desc}}
         .sheet-template-row
-          span.sheet-template-desc
+          span.sheet-template-desc {{desc}}
         | {{/desc}}
