--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -205,7 +205,10 @@
                 button[type='roll'] { text-align: left;  }
                 div.sheet-horz-line { grid-column: 1 / 8; }
                 input[type='number'] { text-align: right; }
-                span.sheet-center {  padding-top: 25%; }
+                span.sheet-center {  
+                    background-color: $lightgray;
+                    padding-top: 25%; 
+                }
             }
 
             //DERIVED ATTRIBUTES
@@ -216,13 +219,20 @@
 
                 span {
                     padding: 4%;
+
+                    &.sheet-center {
+                        background-color: $lightgray;
+                    }
                 }
             }
 
             //PHYSICAL DESCRIPTION
             div.sheet-section-physical {
                 h2 {grid-row: 1 / 1}
-                textarea {grid-row: 2 / 2}
+                textarea {
+                    grid-row: 2 / 2;
+                    min-height: 5em;
+                }
             }
         }
 
