--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -94,9 +94,8 @@
                 height       : 2.1em;
                 text-align   : center;
 
-                &:placeholder {
-                    background: $palecolor;
-                    border: $accent3 0.1em dashed;
+                &:placeholder-shown {
+                    background: $accent2;
                 }
             }
         }
@@ -115,8 +114,9 @@
             font-size     : 1em;
             font-weight   : normal;
             height        : 50px;
-            min-height    : 5em;
-            overflow      : hidden;
+            margin-bottom: 2%;
+            min-height    : 8em;
+            overflow      : scroll;
             overflow-wrap : break-word;
             padding       : 2px;
             resize        : vertical;
@@ -124,9 +124,8 @@
             vertical-align: top;
             white-space   : pre-line;
 
-            &:placeholder {
-                background: $palecolor;
-                border-bottom : 0.2em dotted $accent3;
+            &:placeholder-shown {
+                background: $accent2;
             }
         }
     }
