Fixed issue with initiative rolls

--- a/Cyberpunk Red/CyberpunkRed.css
+++ b/Cyberpunk Red/CyberpunkRed.css
@@ -69,6 +69,32 @@ input.sheet-inputstats {
     padding:10px;
 }
 
+.sheet-rolltemplate-initiative .sheet-template-container {
+    width:100%;
+}
+
+.sheet-rolltemplate-initiative .sheet-template-header {
+    color:white;
+	padding: 10px;
+    background: linear-gradient(135deg, transparent 10px, #dc4435 10px);
+}
+
+.sheet-rolltemplate-initiative .sheet-roll {
+    background-color: white;
+    color:black;
+	width: 100%;
+}
+
+.sheet-rolltemplate-initiative .sheet-normalroll .inlinerollresult  {
+	display: inline-block;
+	min-width: 1.5em;
+	text-align: center;
+	border: none;
+	background-color: white;
+	color: black;
+	padding: 10px;
+}
+
 .sheet-rolltemplate-cprskill .sheet-template-container {
     width:100%;
 }
