uc-728, uc-730 additional damages

--- a/Pathfinder Second Edition by Roll20/pathfinder2.css
+++ b/Pathfinder Second Edition by Roll20/pathfinder2.css
@@ -3904,11 +3904,24 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 		display: none;
 	}
 
-    .sheet-spells input[name="attr_toggles"][value*="npcspellcaster"] ~ span.sheet-npc-spellcaster-field,
-    .sheet-spells input[name="attr_toggles"][value*="npcspellcaster"] ~ .repcontainer .sheet-npc-spellcaster-field {
-        display: inline-block;
-    }
+  .sheet-spells input[name="attr_toggles"][value*="npcspellcaster"] ~ span.sheet-npc-spellcaster-field,
+  .sheet-spells input[name="attr_toggles"][value*="npcspellcaster"] ~ .repcontainer .sheet-npc-spellcaster-field {
+      display: inline-block;
+  }
 
-    .sheet-spells input[name="attr_toggles"][value*="npcspellcaster"] ~ .sheet-npc-spellcaster-field {
-        display: block;
-    }
+  .sheet-spells input[name="attr_toggles"][value*="npcspellcaster"] ~ .sheet-npc-spellcaster-field {
+      display: block;
+  }
+
+	/* NT 2019-09-07 UC-728 and UC-730 */
+	.sheet-npc-melee-strikes span.sheet-npc-dot-field,
+	.sheet-npc-ranged-strikes span.sheet-npc-dot-field {
+		display: inline-block;
+		max-width: 20em;
+		overflow: hidden;
+		margin-bottom: -0.1em;
+		text-overflow: ellipsis;
+  }
+	span.sheet-npc-dot-field:not(:empty)::before {
+        content: "• ";
+  }
