saving small changes

--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -72,7 +72,7 @@
 /* TABS & LOGO SECTION
 ============================= */
     div.sheet-tabs {
-        grid-template-columns: 8em 1fr 3em;
+        grid-template-columns: 8em 1fr 4em;
         margin-bottom: 0.5%;
         @include back-color($maincolor);
 
@@ -99,6 +99,13 @@
         input.sheet-whisper-toggle[value='/w gm'] ~ button > span.sheet-hidden > span.sheet-off,
         input.sheet-whisper-toggle[value=' '] ~ button > span.sheet-hidden > span.sheet-on {
             display: none;
+        }
+
+        select {
+            background-color: $maincolor;
+            color: $accent1;
+            border: none;
+            width: 4em;
         }
     }
 
@@ -413,7 +420,7 @@
                 grid-template-columns: 1fr 0.155em 1fr;
 
                 textarea {
-                    min-height: 90%;
+                    min-height: 83%;
                     margin-bottom: 2%;
                 }
 
