--- a/Delta Green by Arc Dream Publishing/src/scss/_rolltemplate.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_rolltemplate.scss
@@ -62,6 +62,12 @@
                     a[href^="~"] {
                         background-color: $gray !important;
                         font-weight: bold !important;
+                        bottom: 0.01em solid #666;
+                        bottom-right-radius: 0.01em;
+                        color: hsl(0, 0%, 70%);
+                        radius: 0.25em;
+                        right: 0.02em solid hsl(0, 0%, 20%);
+                        style: outset;
                     }
 
                     span {
