--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -13,19 +13,24 @@ input.display_string(name='attr_toggles' type='hidden' value='')
 //TABS & LOGO
 // =============================
 .tabs.grid
-  // Buttons to toggle on GM whisper
-  input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
-  button(data-i18n-title='gm whisper toggle' name='act_whisper' title='gm whisper toggle' type='action') 
-   span(data-i18n='whisper-gm') Whisper GM
-   span.hidden(data-i18n='current status:') current status:
-    span.on(data-i18n='on') on
-    span.off(data-i18n='off') off
-  // LOGO
-  img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
-  // CHARACTER SHEETS
-  button(data-i18n-title='sheet settings' name='act_toggle_settings' title='sheet settings' type='action') 
-    span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
-    span.pictos() y 
+		// Buttons to toggle on GM whisper
+		input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
+		button(data-i18n-title='gm whisper toggle' name='act_whisper' title='gm whisper toggle' type='action') 
+			span(data-i18n='whisper-gm') Whisper GM
+			span.hidden(data-i18n='current status:') current status:
+				span.on(data-i18n='on') on
+				span.off(data-i18n='off') off
+		// LOGO
+		img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
+		// CHARACTER SHEETS
+		select(name='sheet_type')
+			option(selected)
+			optgroup(label='Sheet Type')
+				option(data-i18n='pc' value='pc') pc
+				option(data-i18n='npc' value='npc') npc
+		//button(data-i18n-title='sheet settings' name='act_toggle_settings' title='sheet settings' type='action') 
+			//	span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
+			//	span.pictos() U
 
 
 //- OBJECTS
@@ -36,10 +41,10 @@ include src/pug/_objects.pug
 // NPC SHEET
 // =============================
 .npc
-  .box.npc-flex
-    p NPC STUFF
-  .box.npc-flex
-    p MORE NPC STUFF 
+		.box.npc-flex
+				p NPC STUFF
+		.box.npc-flex
+				p MORE NPC STUFF 
 
 // PC SHEET
 // =============================
@@ -48,9 +53,9 @@ include src/pug/_pc.pug
 // SETTINGS SHEET
 // =============================
 .settings
-  select(name='attr_sheet_select' title='character sheet select' selected)
-    option(data-i18n='pc' value='pc') character
-    option(data-i18n='npc' value='npc') npc
+		select(name='attr_sheet_select' title='character sheet select' selected)
+				option(data-i18n='pc' value='pc') character
+				option(data-i18n='npc' value='npc') npc
 
 // ROLL TEMPLATE
 // =============================
@@ -60,4 +65,4 @@ include src/pug/rolltemplate.pug
 //SHEETWORKERS
 // =============================
 script(type='text/worker')
-  include src/pug/sheetworkers.js
+		include src/pug/sheetworkers.js
