remove setting, npc/pc as select

--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -25,20 +25,13 @@
 /* HIDE DIFFERENT SHEET TYPES BY DEFAULT
 ============================= */
     div.sheet-npc,
-    div.sheet-pc,
-    div.sheet-settings {
+    input.sheet-type[value='npc'] ~ div.sheet-pc {
         display: none;
     }
 
     input.sheet-type[value='npc'] ~ div.sheet-npc,
-    input.sheet-type[value='pc'] ~ div.sheet-pc,
-    input.sheet-display_string[value*='settings'] ~ div.sheet-settings {
+    div.sheet-pc  {
         display: grid;
-    }
-
-    input.sheet-display_string[value*='settings'] ~ div.sheet-npc,
-    input.sheet-display_string[value*='settings'] ~ div.sheet-pc {
-        display: none;
     }
 
     /* HIGHLIGHT BUTTONS
@@ -103,8 +96,9 @@
 
         select {
             background-color: $maincolor;
-            color: $accent1;
             border: none;
+            color: $accent1;
+            font-weight: bold;
             width: 4em;
         }
     }
