--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -23,8 +23,7 @@ input.display_string(name='attr_toggles' type='hidden' value='')
 		// LOGO
 		img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
 		// CHARACTER SHEETS
-		select(name='sheet_type')
-			option(selected)
+		select(name='attr_sheet_type')
 			optgroup(label='Sheet Type')
 				option(data-i18n='pc' value='pc') pc
 				option(data-i18n='npc' value='npc') npc
@@ -49,13 +48,6 @@ include src/pug/_objects.pug
 // PC SHEET
 // =============================
 include src/pug/_pc.pug
-
-// SETTINGS SHEET
-// =============================
-.settings
-		select(name='attr_sheet_select' title='character sheet select' selected)
-				option(data-i18n='pc' value='pc') character
-				option(data-i18n='npc' value='npc') npc
 
 // ROLL TEMPLATE
 // =============================
