npc in progress

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -27,10 +27,6 @@ input.display_string(name='attr_toggles' type='hidden' value='')
 			optgroup(label='Sheet Type')
 				option(data-i18n='pc' value='pc') pc
 				option(data-i18n='npc' value='npc') npc
-		//button(data-i18n-title='sheet settings' name='act_toggle_settings' title='sheet settings' type='action') 
-			//	span.hidden(data-i18n='sheet settings toggle') sheet settings toggle
-			//	span.pictos() U
-
 
 //- OBJECTS
 //- ============================={{/damage}}
@@ -40,10 +36,37 @@ include src/pug/_objects.pug
 // NPC SHEET
 // =============================
 .npc
-		.box.npc-flex
-				p NPC STUFF
-		.box.npc-flex
-				p MORE NPC STUFF 
+	.grid
+		.section-header
+			label(data-i18n-title='enter a name for non-player character' title='enter a name for non-player character')
+				input(data-i18n-placeholder='character name' name='attr_name' placeholder='Character name' title='@{name}' type='text' value='')
+		.section-body
+			.section
+				each val, key in statsObject
+					- const statRollValue = `@{gm_toggle} &{template:rolls} {{header=^{${val}}}} {{subheader=@{${key}}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`;
+					button(name=key data-i18n-title=key + ' roll' title=key + ' roll' type='roll' value!=statRollValue)
+						h1(data-i18n=val)=val
+					label(data-i18n-title=key title=key)
+						input(data-i18n-placeholder='10' min=0 name='attr_' + key placeholder='10' title='@{' + key + '}' type='number' value='10')
+			.section
+				h1(data-i18n='HP') HP
+				label(data-i18n-title='enter hit points' title='enter hit points')
+					input(data-i18n-placeholder='10' name='attr_hit_points' placeholder='10' title='@{hit_points}' type='number' value='')
+				h1(data-i18n='WP') WP
+				label(data-i18n-title='enter willpower points' title='enter willpower points')
+					input(data-i18n-placeholder='10' name='attr_willpower_points' placeholder='10' title='@{willpower_points}' type='number' value='')
+			.section
+				h1(data-i18n='armor') ARMOR
+					label(data-i18n-title='enter armor text' title='enter armor text')
+						input(data-i18n-placeholder='8 points of thick hide' name='attr_armor' placeholder='8 points of thick hide' title='@{armor}' type='text' value='')
+			.section
+				h1(data-i18n='skills') skills
+			.section
+				h1(data-i18n='attacks') attacks
+			.section
+				h1(data-i18n='other notes') other notes
+					textarea(name='attr_other_notes')
+
 
 // PC SHEET
 // =============================
