--- a/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_mixins.pug
@@ -10,7 +10,7 @@ mixin skill(val, key)
 	- const attr = key.replace(' ', '_');
 	- const array = ['art', 'craft', 'military science', 'pilot', 'science'];
 	- const caps = (key === 'humint' || key === 'sigint') ? key.toUpperCase() : key;
-	- const skillRollValue = `@{gm_toggle} &{template:rolls} {{header=^{${key}}}} {{subheader=@{${attr}}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`;
+	- const skillRollValue = `@{gm_toggle} &{template:rolls} {{header=^{${caps}}}} {{subheader=@{${attr}}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`;
 	label.styled-checkbox(data-i18n-title=caps + ' fail checkbox' title=caps + ' fail checkbox')
 		input(name='attr_' + attr + '_fail' title='@{' + attr + '_fail}' type='checkbox')
 	button(data-i18n-title=caps + ' roll' name=key title=caps + ' roll' type='roll' value=skillRollValue)
@@ -23,6 +23,14 @@ mixin skill(val, key)
 		label.custom-label(data-i18n-title=key + ' name' title=key + ' name')
 			textarea(data-i18n-placeholder='skill name' name='attr_' + attr +'_name' placeholder='skill name' title='@{' + attr + '_name}' value='')
 	.horz-line
+
+//-	DERIVED ATTRIBUTE INPUT OR SPAN
+mixin derived(val, attrName)
+	if val === 'SAN'
+		input(name='attr_' + attrName + '_max' placeholder='50' title='@{' + attrName + '_max}' type='number' value=presetValue)
+	else
+		span(class='center' name='attr_' + attrName + '_max' title='@{' + attrName + '_max' + '}')
+
 
 //- TRANSLATIONS
 mixin personal(val, key)
