--- a/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
@@ -6,10 +6,8 @@
       //- Display a header on the template -
       | {{#header}}
       .sheet-template-header
-        h1 {{header}}
-        | {{#subheader}}
-        h2 ({{subheader}}%)
-        | {{/subheader}}
+        h1 {{header}} 
+        h2 {{#subheader}}({{subheader}}%){{/subheader}}
       | {{/header}}
       //- Display the dice roll in the template -
       .sheet-template-body
