--- a/Delta Green by Arc Dream Publishing/src/scss/_rolltemplate.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_rolltemplate.scss
@@ -33,12 +33,15 @@
 
 
             div.sheet-template-header {
-                background-color: $accent3;
+                background-color: $maincolor;
                 border-bottom: 2px solid $gray   ;
                 padding: 2%;
                 text-transform: capitalize;
 
-                h1, h2 {line-height: 1.2em;}
+                h1, h2 {
+                    display: inline;
+                    line-height: 1.2em;
+                }
 
                 h1 {
                     color: $accent1;
@@ -54,20 +57,24 @@
 
             div.sheet-template-body {
                 div.sheet-template-row {
-                    background-color: $palecolor;
+                    background-color: $accent1;
                     padding: 3%;
 
                     &:nth-child(2n+0) { background-color: $accent2; }
 
                     a[href^="~"] {
-                        background-color: $gray !important;
+                        background-color: $palecolor !important;
                         font-weight: bold !important;
-                        bottom: 0.01em solid #666;
-                        bottom-right-radius: 0.01em;
-                        color: hsl(0, 0%, 70%);
-                        radius: 0.25em;
-                        right: 0.02em solid hsl(0, 0%, 20%);
-                        style: outset;
+                        color: $maincolor;
+                        font-size: 0.8em;
+                        border: {
+                            bottom             : 0.01em solid #666;
+                            bottom-right-radius: 0.01em;
+                            color              : hsl(0, 0%, 70%);
+                            radius             : 0.25em;
+                            right              : 0.02em solid hsl(0, 0%, 20%);
+                            style              : outset;
+                        }
                     }
 
                     span {
