--- a/Delta Green by Arc Dream Publishing/src/scss/_pc.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_pc.scss
@@ -4,9 +4,10 @@
         grid-template-columns: 1fr 1fr;
 
         h1 {
-           font-size: 1em;
-           text-align: center;
-           transform: rotate(180deg);
+            color: $accent1;
+            font-size: 1em;
+            text-align: center;
+            transform: rotate(180deg);
         }
 
         input {
