--- a/TailsOfEquestria/pug/index.pug
+++ b/TailsOfEquestria/pug/index.pug
@@ -6,7 +6,7 @@ include tabs.pug
 +input('checkbox', 'useApiExplodingHoof')(style="display: none;")
 
 .top
-  img(src='http://ninjadivision.com/wp-content/uploads/2017/02/MLP-Website-Header-900x325.jpg')
+  img(src='https://i.pinimg.com/originals/15/90/a7/1590a71a0c382f70a499c977caa6e3bb.jpg')
   .mask
 
 +tabs('sheet_type', [
