Added source drop-down fields for talents and quirks.

--- a/TailsOfEquestria/pug/fields.pug
+++ b/TailsOfEquestria/pug/fields.pug
@@ -86,6 +86,31 @@ mixin selectDice(name)
     +option('2D20+D10', '{D20,D20,D10}k1')
     +option('2D20+D12', '{D20,D20,D12}k1')
     +option('3D20', '{D20,D20,D20}k1')
+
+mixin selectQuirkSource(name)
+  +select(name)(style=attributes.style)
+    +option('Pick One', 'null', true)
+    +option('Race')
+    +option('Curse')
+    +option('Item')
+    +option('Personality')
+    +option('Physical')
+    +option('Story')
+    +option('Temporary')
+    +option("Other")
+
+mixin selectTalentSource(name)
+  +select(name)(style=attributes.style)
+    +option('Pick One', 'null', true)
+    +option('Cutie Mark')
+    +option('Race')
+    +option('Level Up')
+    +option('Book')
+    +option('Item')
+    +option('Spell')
+    +option('Story')
+    +option('Temporary')
+    +option('Other')
     
 mixin selectTrait(name)
   +select(name)(style=attributes.style)
