--- a/TailsOfEquestria/pug/tabPC.pug
+++ b/TailsOfEquestria/pug/tabPC.pug
@@ -87,6 +87,7 @@ include fields.pug
             .talentIcon(style='font-size: 3em;')
           div(style="display: inline-block; width: 6.5in;")
             +labelledUnderlined('')(style='width: 2.5in;'): +input('text', prefix + 'name')(placeholder=placeholder)
+            +labelledUnderlined('Source:'): +selectTalentSource(prefix + 'talentSource')
             +labelledUnderlined('Dice:'): +selectDice(prefix + 'dice')
             +labelledUnderlined('Trait'): +selectTrait(prefix + 'trait')
             +updowngrade(prefix)
@@ -106,6 +107,7 @@ include fields.pug
         .quirk(class=isMain ? 'quirkMain' : '')
           .quirkIcon(style='font-size: 2em;')
           +labelledUnderlined(''): +input('text', prefix + 'name')
+          +labelledUnderlined('Source:'): +selectQuirkSource(prefix + 'quirkSource')
           +labelledUnderlined('Notes'): +input('text', prefix + 'notes')
       
       h1 Quirks:
