--- a/TailsOfEquestria/sheet.css
+++ b/TailsOfEquestria/sheet.css
@@ -973,11 +973,11 @@
   vertical-align: middle;
   width: 0.3in;
 }
-.charsheet .sheet-main-container .sheet-quirks .sheet-quirk input {
+.charsheet .sheet-main-container .sheet-quirks .sheet-quirk input, .charsheet .sheet-main-container .sheet-quirks .sheet-quirk select {
   background: transparent;
   color: #5e3dba;
 }
-.charsheet .sheet-main-container .sheet-quirks .sheet-quirk .sheet-labelledUnderlined:nth-of-type(3) {
+.charsheet .sheet-main-container .sheet-quirks .sheet-quirk .sheet-labelledUnderlined:nth-of-type(4) {
   width: 4.5in;
 }
 .charsheet .sheet-main-container .sheet-talents {
