--- a/TailsOfEquestria/less/main.less
+++ b/TailsOfEquestria/less/main.less
@@ -91,12 +91,12 @@
         width: 0.3in;
       }
 
-      input {
+      input, select {
         background: transparent;
         color: @fontColor;
       }
 
-      .labelledUnderlined:nth-of-type(3) {
+      .labelledUnderlined:nth-of-type(4) {
         width: 4.5in;
       }
     }
