change whisper to a switch

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -13,20 +13,20 @@ input.display_string(name='attr_toggles' type='hidden' value='')
 //TABS & LOGO
 // =============================
 .tabs.grid
-		// Buttons to toggle on GM whisper
-		input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
-		button(data-i18n-title='gm whisper toggle' name='act_whisper' title='gm whisper toggle' type='action') 
-			span(data-i18n='whisper-gm') Whisper GM
-			span.hidden(data-i18n='current status:') current status:
-				span.on(data-i18n='on') on
-				span.off(data-i18n='off') off
-		// LOGO
-		img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
-		// CHARACTER SHEETS
-		select(name='attr_sheet_type')
-			optgroup(label='Sheet Type')
-				option(data-i18n='pc' value='pc') pc
-				option(data-i18n='npc' value='npc') npc
+	// Buttons to toggle on GM whisper
+	span(data-i18n='GM Whisper') GM Whisper
+	label.switch(data-i18n='whisper rolls to gm' title='whisper rolls to gm')
+		input.whisper-toggle(name='attr_gm_toggle' type='checkbox' value='/w gm')
+		span.slider
+	// LOGO
+	img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
+	// CHARACTER SHEETS
+	span(data-i18n='Sheet Type') Sheet Type
+	select(name='attr_sheet_type')
+		optgroup(label='Sheet Type')
+			option(data-i18n='pc' value='pc') pc
+			option(data-i18n='npc' value='npc') npc
+
 
 //- OBJECTS
 //- ============================={{/damage}}
