--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -39,9 +39,13 @@
         max-width: 500px;
     }
 
-    /* HIGHLIGHT BUTTONS
-   ============================= */
-    input.sheet-whisper-toggle[value*='gm'] + button[name*='whisper'],
+/* SWITCHES
+============================= */
+    @import 'src/scss/_switch'; 
+
+
+/* HIGHLIGHT BUTTONS
+============================= */
     input.sheet-display_string[value*='settings'] ~ div.sheet-tabs button[name='act_toggle_settings'] {
         @include back-color($gray);
         box-shadow: inset 0px 0px 3px 1px $accent1;
@@ -70,7 +74,7 @@
 /* TABS & LOGO SECTION
 ============================= */
     div.sheet-tabs {
-        grid-template-columns: 8em 1fr 4em;
+        grid-template-columns: 8em 1fr 6em;
         margin-bottom: 0.5%;
         @include back-color($maincolor);
 
@@ -78,8 +82,15 @@
             width: 100%;
         }
 
+        label.sheet-switch {
+            grid-column: 1;
+            margin-left: 5%;
+            margin-top: 2%;
+        }
+
         img {
             @include grid-area(1, 2, 3, 2);
+            height: 99%;
         }
 
         button[name='attr_gm_toggle'] {
@@ -105,6 +116,21 @@
             color: $accent1;
             font-weight: bold;
             width: 4em;
+        }
+
+        span {
+            color: $accent1;
+            font-weight: bold;
+
+            &:nth-of-type(1) {
+               padding: 5% 1% 0px 5%;
+               @include grid-area(1, 1, 1, 1);
+            }
+
+            &:nth-of-type(2) {
+               padding: 5% 1% 0px 5%; 
+               @include grid-area(1, 3, 1, 3);
+            }
         }
     }
 
@@ -169,3 +195,13 @@
         position : absolute;
         width    : 1px;
     }
+
+/* REMVOE WEBKIT
+============================= */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;}
+
+input[type=number] {
+    -moz-appearance:textfield;}
